
To upgrade to the version:

alter table bug_posts add bp_email_cc nvarchar(800) null

* Fixed bug where SMTP servers were rejecting emails because of empty
CC field.

* Fixed bug were adding an attachment failed because of null content
type.  

* Fixed bug that prevented the "I forgot my password" from being used
unless you also enabled self-registration.

* Add new feature, a "news" link.  To enable it, add the following to
your Web.config:

	EnableWhatsNewPage=1
	WhatsNewPageIntervalInSeconds=30

That will add a new menu item, "news", which links to view_whatsnew.aspx.
That new page will automatically refresh itself with what bugs were 
recently added, changed, etc.   Note that this feature does not obey
any permission.   It will display information about all bugs, whether
the user has permission to view them or not.  If the user clicks on a
link in order to view the details of that bug, THEN permissions WILL be 
enforced, but not on the list itself.

* Removed the "CommentSortOrder" from Web.config. No longer supporting
it.

* Now recording email "CC" for outgoing emails.

IIIINNNNCCCOMING???


-----------------------------------------------------------------------
Version 2.9.3   10/05/2008 
-----------------------------------------------------------------------

To upgrade to this version, change your Web.config from this:

	<assemblies>
		<add assembly="System.DirectoryServices.Protocols, 
			Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
	</assemblies>

	to this, adding the additional assembly reference:

	<assemblies>
		<add assembly="System.DirectoryServices.Protocols, 
			Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
		<add assembly="System.DirectoryServices, 
			Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
	</assemblies>


* The file "seen.aspx" was missing from the 2.9.2 .zip file, so the 
new/old, read/unread feature didn't work.  Added to this .zip file.
