@@ -379,9 +379,10 @@
 		<!--
 			There's a special user in the database, "guest". Think of it as a user account that can
 			be shared by several people. The guest user can't save settings and can't save searches.
-			If "AllowGuestWithoutLogin" is set to "0", then the guest user still has to login with
-			a password.  If set to "1", then the guest user doesn't need to even enter a password.
-			Instead, a link will appear on the login page, default.aspx, saying:
+			If "AllowGuestWithoutLogin" is set to "0", and if you set the guest user to active,
+			then the guest user still has to login with a password.  If set to "1", then the guest 
+			user doesn't need to even enter a password.	Instead, a link will appear on the login page, 
+			default.aspx, saying:
 			
 			Continue as "guest" without logging in
 			
@@ -842,7 +843,7 @@ Don't call us, we'll call you."/>
 			maybe not.
 			
 		-->
-		<add key="EnableTags" value="0" />
+		<add key="EnableTags" value="1" />
 		
 		<!--
 			I'm not 100% sure that FCKEditor, or the way I'm using FCKEditor, 
@@ -878,7 +879,7 @@ Don't call us, we'll call you."/>
 <add key="ExportToExcelCharset" value="UTF-8" />
 		
 		
-		
+<add key="MemoryLogEnabled" value="1" />		
 
 	</btnetSettings>
 
